# NewsGatherer

./: main.py  pyproject.toml
